# cnvturbo

./: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: api.rst  conf.py  contributing.md  dev_notes.md  index.md  infercnv.rst
scripts/: release.sh
src/cnvturbo/: __init__.py
src/cnvturbo/datasets/: __init__.py
src/cnvturbo/io/: _genepos.py  _scevan.py
src/cnvturbo/pl/: _chromosome_heatmap.py
src/cnvturbo/pp/: __init__.py
src/cnvturbo/tl/: __init__.py  _backend.py  _copykat.py  _hmm.py  _infercnv.py  _infercnv_r.py  _scores.py
template/: 01_r_compatible_analysis.py  02_visualization.py  03_benchmark_against_infercnv.py  README.md
tests/: conftest.py  test_io.py  test_plotting.py  test_scores.py  test_tools.py
