[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]


[project]
name = "cnvturbo"
dynamic = ["version"]
description = "cnvturbo: A high-performance scRNA-seq CNV inference toolkit with R inferCNV-compatible HMM i6 cell-level tumor calling. The R-exact main pipeline runs on CPU + joblib (100-200x faster than R inferCNV); optional Numba/PyTorch CUDA back-ends accelerate the legacy infercnv + hmm_call_cells paths. Fully compatible with Scanpy/AnnData."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "luffy"},
]
maintainers = [
    {name = "luffy", email="zzqzziavip@gmail.com"}
]
contributors = [
    {name = "luffy", email = "zzqzziavip@gmail.com"}
]
urls.Documentation = "https://github.com/LogicByteCraft/cnvturbo#readme"
urls.Source = "https://github.com/LogicByteCraft/cnvturbo"
urls.Home-page = "https://github.com/LogicByteCraft/cnvturbo"
urls.Issues = "https://github.com/LogicByteCraft/cnvturbo/issues"
dependencies = [
    'anndata>=0.7.3',
    "scanpy>=1.10",
    'pandas>=1',
    'numpy>=1.20', # includes type annotations
    'tqdm>=4.63.0', # fixes tqdm.auto
    'pytoml',
    'pycairo>=1.20; sys_platform == "win32"',
    'leidenalg',
    'pyreadr',
    # for debug logging (referenced from the issue template)
    "session-info",
    "pybiomart>=0.2.0",
]

[project.optional-dependencies]
gtf = [
    'gtfparse>=2.1'
]
copykat = [
    'rpy2'
]
# HMM i6 加速依赖（可选）
# 注意：这些 extras 只对 legacy `tl.infercnv` (sliding-window) +
# `tl.hmm_call_cells` (cell-level Viterbi) 路径生效；R-exact 主路径
# (`infercnv_r_compat` + `compute_hspike_emission_params` + `hmm_call_subclusters`)
# 完全跑在 CPU + joblib 上，装这些 extras 不会带来任何加速。
# CPU 加速 (Numba)：pip install cnvturbo[hmm-cpu]
# GPU 加速 (PyTorch CUDA)：pip install cnvturbo[hmm-gpu]
# Baum-Welch EM 拟合：pip install cnvturbo[hmm-em]
# 全部功能：pip install cnvturbo[hmm]
hmm-cpu = [
    'numba>=0.57',
]
hmm-gpu = [
    'torch>=2.0',
]
hmm-em = [
    'hmmlearn>=0.3',
]
hmm = [
    'numba>=0.57',
    'torch>=2.0',
    'hmmlearn>=0.3',
]
dev = [
    # CLI for managing the python project
    "pre-commit",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4.2",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=1.1.0",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # for tutorial
    "ipykernel",
    "sphinx-copybutton",
    'pycairo',
    'jupyter_client',
    "pandas",
    "setuptools", # required for sphinxcontrib-bibtex
]
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/cnvturbo"]

[tool.ruff]
src = ["src"]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb",
]

[tool.uv.sources]
gtfparse = { git = "https://github.com/lrauschning/gtfparse.git", rev = "dev" }
